# lib/units/api/paths/devices/{serial}/book.js
@@ -1,0 +1,9 @@
+import {bookDevice, releaseBooking} from '../../../controllers/devices.js'
+
+export function post(req, res) {
+    return bookDevice(req, res)
+}
+
+export function del(req, res) {
+    return releaseBooking(req, res)
+}
